<?xml version="1.0"?>
<package>
  <name>ghost</name>
  <version>0.2.0</version>
  <description>AND NOW WE HAUNT</description>

  <maintainer email="jabdullah982@gmail.com">Jalalah Abdullah</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ghost_srv</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ghost_srv</run_depend>


</package>
